# insanely-fast-whisper

./: .gitignore  AGENTS.md  CLAUDE.md  PC1_64gb.md  PC2_Specs.md  README.md  pyproject.toml
src/insanely_fast_whisper/: cli.py
tests/: test_cli.py
